Unify scrollbar appearance configs

--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -95,10 +95,10 @@
   z-index: 0;
 }
 
-:root.left.extra-margin-for-scrollbar .tab:not(.pinned) {
+:root.left.overlay-scrollbar .tab:not(.pinned) {
   padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
-:root.right.extra-margin-for-scrollbar .tab:not(.pinned) {
+:root.right.overlay-scrollbar .tab:not(.pinned) {
   padding-right: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
 
