Add note for macOS, instead of hiding configs.
Not only "Default" and "Narrow", but "Hide" also don't work on lately macOS.

--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -63,6 +63,6 @@ li label img {
   -moz-user-input: disabled;
 }
 
-:root.platform-mac .unavailable-on-mac {
+:root:not(.platform-mac) .available-only-on-mac {
   display: none;
 }
