--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -338,15 +338,15 @@ ul {
     - X: upper case X
       * Too narrow
     - ×: U+00D7 MULTIPLICATION SIGN (z notation Cartesian product)
-      * Too small on macOSX
+      * Too small on macOS
     - ╳: U+2573 BOX DRAWINGS LIGHT DIAGONAL CROSS
       * Too large on Ubuntu
     - ☓ : U+2613 SALTIRE (St Andrew's Cross)
       * Narrow a little on Windows and macOS
     - ✕: U+2715 MULTIPLICATION X
-      * Too small on macOSX
+      * Too small on macOS
     - ✖: U+2716 HEAVY MULTIPLICATION X
-      * Too small on macOSX
+      * Too small on macOS
     - ❌ : U+274C CROSS MARK
       * Colored on macOS
     - ❎ : U+274E NEGATIVE SQUARED CROSS MARK
@@ -354,13 +354,13 @@ ul {
       * Box around the mark is unnecessary
     - ⨉ : U+2A09 N-ARY TIMES OPERATOR
     - ⨯: U+2A2F VECTOR OR CROSS PRODUCT
-      * Too small on macOSX
+      * Too small on macOS
     - 🗙: U+1F5D9 CANCELLATION X
-      * Unavailable on macOSX
+      * Unavailable on macOS
     - 🗴 : U+1F5F4 BALLOT SCRIPT X
-      * Unavailable on macOSX
+      * Unavailable on macOS
     - 🞩: U+1F7A9 LIGHT SALTIRE
-      * Unavailable on macOSX
+      * Unavailable on macOS
     So ⨉ (U+2A09) looks good for me on Windows, macOS, and Linux (tested on Ubuntu).
   */
   content: "⨉";
