--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -16,6 +16,15 @@
   background: var(--tabbar-bg);
 }
 
+:root[color-scheme="system-color"] {
+  --tab-surface: var(--browser-bg-base, -moz-dialog);
+  --tab-text: var(--browser-fg, -moz-dialogtext);
+  --tab-border: var(--browser-bg-more-darker, ThreeDShadow);
+  --tab-side-border: var(--browser-bg-darker, ThreeDLightShadow);
+  --tab-surface-hover: var(--browser-bg-more-lighter, ThreeDHighlight);
+  --tab-dropmarker: var(--browser-fg, -moz-dialogtext);
+}
+
 .tab,
 .after-tabs button {
   background: var(--tab-surface);
