--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -59,6 +59,14 @@
   background: var(--tab-surface);
 }
 
+:root[color-scheme="system-color"] {
+  --tab-surface: var(--browser-bg-base, -moz-dialog);
+  --tab-text: var(--browser-fg, -moz-dialogtext);
+  --tab-active-text: var(--browser-fg-active, -moz-dialogtext);
+  --tab-border: var(--browser-bg-more-darker, ThreeDShadow);
+  --tab-dropmarker: var(--browser-fg, -moz-dialogtext
+}
+
 .tab,
 .after-tabs button {
   background: var(--tab-surface);
