Use more lighter color as background

--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -23,7 +23,7 @@
   --tab-side-border: var(--browser-bg-darker, ThreeDLightShadow);
   --tab-surface-hover: var(--browser-bg-more-lighter, ThreeDHighlight);
   --tab-dropmarker: var(--browser-fg, -moz-dialogtext);
-  --tabbar-bg: var(--browser-bg-darker, ThreeDDarkShadow);
+  --tabbar-bg: var(--browser-bg-darker, ThreeDShadow);
 }
 
 .tab,
