Apply tab text color for closebox correctly

--- a/webextensions/sidebar/styles/square/plain-color-dark.css
+++ b/webextensions/sidebar/styles/square/plain-color-dark.css
@@ -50,9 +50,6 @@
   right: 0;
 }
 
-.tab.active .twisty,
-.tab.active .label,
-.tab.active .counter {
-  color: #f9f9fa;
+.tab.active {
+  --tab-text: #f9f9fa;
 }
-
