--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -29,6 +29,10 @@
   color: var(--tab-text);
 }
 
+.tab * {
+  color: var(--tab-text);
+}
+
 .tab:not(.collapsed):hover,
 .after-tabs button:hover {
   opacity: 0.7;
@@ -47,8 +51,9 @@
 
 .tab.active .twisty,
 .tab.active .label,
-.tab.active .counter {
-  color: HighlightText;
+.tab.active .counter,
+.tab.active .closebox {
+  --tab-text: HighlightText;
 }
 
 .tab,
@@ -70,13 +75,13 @@
 
 .tab .closebox:hover {
   /*color: Highlight;*/
-  color: HighlightText;
+  --tab-text: HighlightText;
   background: Highlight;
   opacity: 0.75;
 }
 
 .tab.active .closebox:hover {
-  color: Highlight;
+  --tab-text: Highlight;
   background: HighlightText;
   opacity: 0.5;
 }
