Define and apply colors more systematic

--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -40,7 +40,7 @@
 }
 
 .tab.active {
-  background: Highlight;
+  --tab-surface: Highlight;
   --throbber-color: HighlightText;
   --tab-border: Highlight;
 }
