--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -43,6 +43,7 @@
   --tab-surface-active-gradient: -moz-linear-gradient(top, #A0B0CF, #7386AB) repeat-x;
   --tab-surface-active-gradient-inactive: -moz-linear-gradient(top, #B4B4B4, #8A8A8A) repeat-x;
   --tab-text: black;
+  --tab-text-inverted: white;
   --tab-text-active: white;
   --badge-bg-color: #91a0c0;
   --badge-color-inactive: #b5b5b5;
