--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -64,9 +64,9 @@
 :root[color-scheme="system-color"] {
   --tab-surface: var(--browser-bg-base, -moz-dialog);
   --tab-text: var(--browser-fg, -moz-dialogtext);
-  --tab-text-inverted: var(--browser-bg-lighter, ThreeDHighlight);
+  --tab-text-inverted: var(--browser-bg-lighter, -moz-dialog);
   --tab-active-text: var(--browser-fg-active, -moz-dialogtext);
-  --tab-active-text-inverted: var(--browser-bg-more-lighter, ThreeDHighlight);
+  --tab-active-text-inverted: var(--browser-bg-more-lighter, -moz-dialog);
   --tab-border: var(--browser-bg-more-darker, ThreeDShadow);
   --tab-dropmarker: var(--browser-fg, -moz-dialogtext);
 }
