Match visual of closebox to Photon design

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -339,7 +339,7 @@ ul {
   position: relative;
 }
 
-.closebox::before {
+.closebox::after {
   /*
     There are some possible characters for this purpose:
     https://en.wikipedia.org/wiki/X_mark
