--- a/webextensions/sidebar/styles/square/base.css
+++ b/webextensions/sidebar/styles/square/base.css
@@ -45,3 +45,18 @@
   margin-top: var(--tab-closebox-negative-offset);
   padding: var(--tab-closebox-offset) 0.25em;
 }
+
+.tab .closebox::before {
+  border-radius: 10%;
+  content: "";
+  display: inline-block;
+  height: calc(var(--svg-small-icon-size) + 0.2em);
+  margin-left: -0.1em;
+  margin-top: -0.1em;
+  width: calc(var(--svg-small-icon-size) + 0.2em);
+  position: absolute;
+}
+
+.tab .closebox:hover::before {
+  background: var(--tab-text-inverted);
+}
