--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -104,9 +104,7 @@
   --throbber-color: #B5C5E0;
 }
 
-.closebox {
-  background: none transparent;
-  border: none 0 transparent;
-  margin: 0;
-  padding: 0.1em;
+.tab .closebox:hover::before {
+  background: var(--tab-text);
+  opacity: 0.2;
 }
